# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  settings.py  test.py
.github/workflows/: pylint.yml
page_analyzer/: __init__.py  app.py  data_base.py  seo.py  validator.py
page_analyzer/templates/: index.html  show.html  urls.html
